# haskell-distribution

./: LICENSE  README.md  distribution.cabal  haskell-distribution.cabal
Data/: Distribution.hs
Data/Distribution/: Aggregator.hs  Coin.hs  Core.hs  Dice.hs  Measure.hs  Monadic.hs  Plot.hs  Sample.hs
Data/Distribution/Domain/: Coin.hs  Dice.hs
