
-- The name of the package.
name:                haskell-distribution

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:             Finite discrete probability distributions.

-- A longer description of the package.
description:          Package for manipulating finite discrete probability distributions. Supports transformations, measurements, efficient sampling and plotting.

-- URL for the project homepage or repository.
homepage:            https://github.com/redelmann/haskell-distribution

-- The license under which the package is released.
license:             Apache-2.0

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Romain Edelmann

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          romain.edelmann@gmail.com

-- A copyright notice.
copyright:           Copyright 2014 Romain Edelmann

category:            Math

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


library
  -- Modules exported by the library.
  exposed-modules:     Data.Distribution, Data.Distribution.Coin, Data.Distribution.Dice, Data.Distribution.Plot, Data.Distribution.Sample

  -- Modules included in this library but not exported.
  -- other-modules:

  -- Other library packages from which modules are imported.
  build-depends:       base ==4.6.*, containers ==0.5.*, Chart ==1.2.*, Chart-cairo ==1.2.*, colour ==2.3.*, data-default-class ==0.0.*, lens ==4.1.*, MonadRandom ==0.1.*, vector ==0.10.*

